# tetrs

./: .gitignore  Cargo.toml  PLAN.md  README.md
src/: app.rs  main.rs
src/ai/: difficulty.rs  evaluator.rs  mod.rs  placement.rs
src/data/: config.rs  high_scores.rs  mod.rs
src/game/: bag.rs  board.rs  clear.rs  garbage.rs  ghost.rs  gravity.rs  hold.rs  locking.rs  mod.rs  movement.rs  piece.rs  scoring.rs  srs.rs  stats.rs
src/input/: das.rs  keybinds.rs  mod.rs
src/modes/: endless.rs  mod.rs  sprint.rs  versus.rs
src/ui/: effects.rs  layout.rs  mod.rs  theme.rs
src/ui/screens/: game.rs  game_over.rs  high_scores.rs  menu.rs  mod.rs
src/ui/widgets/: action_text.rs  board.rs  garbage_bar.rs  hold_box.rs  mod.rs  next_queue.rs  sidebar.rs
