[package]
name = "tetrs"
version = "0.1.0"
edition = "2021"
description = "A modern terminal Tetris with SRS, T-spins, versus AI, and Vim keybinds"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
